package com.siddy.app;

public interface DanceImpl {
        void spin();
        void doTheCaterpillar();
        void jump();
}
